# multivariate-math

./: .gitignore  Dockerfile  LICENSE  Makefile  derivationofcrossproduct.tex  format.sh  pyproject.toml  requirements.txt
.githooks/: pre-commit
animation/: format.sh  requirements.txt
animation/src/: crossproduct.py  lines.vert  modelview.py  renderer.py
animation/src/modelviewperspectiveprojection/: ground.vert  modelviewperspectiveprojection.py
derivationofcrossproduct/: Makefile  derivationofcrossproduct.tex
derivationofcrossproduct/animation/: format.sh  requirements.txt
derivationofcrossproduct/animation/src/: crossproduct.py  lines.geom  renderer.py
entrypoint/: .bashrc  crossproduct.sh  entrypoint.sh  format.sh  jupyter.sh  pdfs.sh  shell.sh  spyder.sh
entrypoint/dotfiles/: .extrabashrc
entrypoint/dotfiles/.emacs.d/: init.el
entrypoint/dotfiles/.emacs.d/elpa/better-defaults-20260621.1647/: better-defaults-pkg.el  better-defaults.el
entrypoint/dotfiles/.emacs.d/elpa/dracula-theme-20260701.2051/: dracula-theme-pkg.el  dracula-theme.el
entrypoint/dotfiles/.emacs.d/elpa/gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
entrypoint/dotfiles/.emacs.d/elpa/org-modern-20260707.1016/: org-modern-pkg.el  org-modern.el
entrypoint/dotfiles/.emacs.d/elpa/projectile-20260706.1149/: projectile-pkg.el  projectile.el
entrypoint/dotfiles/.emacs.d/elpa/web-server-20210708.2242/: doclicense.info  gpl.info  web-server.info
geometricalgebra/: requirements.txt
geometricalgebra/src/: rotate.py  twod.py
proofs/: Makefile  crossproduct.tex  multivariatebasics.tex  quaternions.tex
src/crossproduct/: _labels.py  crossproduct.py  image.frag  image.vert  lines.vert  renderer.py
src/geometric-algebra/: crossproduct.ipynb  crossproduct.py  twod.py
src/geometric-algrebra/: crossproduct.ipynb  rotate.py
src/plotting/: plotting.py
tasks/: crossproduct-label-fixes.md  debian-to-fedora44-gacalc-model.md  image-export-import-targets.md  port-mvp-billboard-labels.md  pyimgui-to-imgui-bundle.md  python-deps-at-image-build.md  update-emacs-packages-target.md
(+6 files in other folders)
