[project]
name = "multivariatemath"
version = "0.0.1"
authors = [{name="William Emerison Six", email="billsix@gmail.com"}]
description = "Animations and proofs for multivariate math"

# Runtime dependencies -- what the demos need to import and run.  The heavy
# native ones (numpy, pillow, PyOpenGL, sympy, matplotlib) are satisfied by
# dnf packages through the --system-site-packages venv (see Dockerfile), so
# uv only downloads the rest from PyPI.
dependencies = [
    "galgebra",
    "glfw",
    "imgui-bundle",
    "matplotlib",
    "numpy",
    "pillow",
    "pyMatrixStack",
    "PyOpenGL",
    "sympy",
]

# Optional feature groups, gacalc-style -- the dev container installs all of
# them (see Dockerfile); they are the single source of truth (no
# requirements.txt, no package lists hardcoded in the Dockerfile).
[project.optional-dependencies]
# the percent-format notebooks
notebooks = ["jupytext"]
# the interactive JupyterLab environment to run those notebooks
jupyter = ["jupyterlab", "jupyter", "jupyter-lsp", "jupyter-ydoc", "jupyterlab-mathjax3", "mathjax"]
# lint/format tooling -- not needed at runtime
dev = ["autoflake8", "removestar", "ruff"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
